--- a/layouts/index.html
+++ b/layouts/index.html
@@ -14,7 +14,7 @@
             <li class="fs-4 mb-3"><span class="lnr lnr-chevron-right"></span> Não vai emitir Notas Fiscais por alguns meses?</li>
             <li class="fs-4 mb-3"><span class="lnr lnr-chevron-right"></span> Acha que está pagando muito caro pela contabilidade da sua empresa inativa?</li>
           </ul>
-          
+
           <p class="xs-center"><a href="https://app.pjpark.com.br" class="btn btn-lg btn-primary mt-5">Estacione sua empresa aqui</a></p>
         </div>
         <div class="col-sm-12 offset-md-1 col-md-4 text-center">
@@ -46,7 +46,7 @@
             <li class="fs-4 mb-3"><span class="lnr lnr-chevron-right"></span> Reativação com 1 clique</li>
           </ul>
 
-          <p class="xs-center"><a href="https://app.pjpark.com.br" class="btn btn-lg btn-primary mt-5">Apenas R$ 39,90 por mês*</a></p>
+          <p class="xs-center"><a href="https://app.pjpark.com.br" class="btn btn-lg btn-primary mt-5">Apenas R$ 49,90 por mês</a></p>
         </div>
       </div>
     </div>
@@ -77,7 +77,7 @@
       </div>
     </div>
   </section>
-  
+
   <section class="four" data-aos="zoom-in">
     <a name="sobre"></a>
     <div>
@@ -94,19 +94,13 @@
 
         <div class="col-sm-12 offset-md-1 col-md-7">
           <p class="fs-4 xs-center">A PJ Park é uma startup construída com amor em Maringá ❤️</p>
-          
-          <p class="fs-4 xs-center">Oferecemos serviços online de regularização e manutenção de empresas inativas a um preço super reduzido. Só R$ 39,90 mês*!</p>
-          
+
+          <p class="fs-4 xs-center">Oferecemos serviços online de regularização e manutenção de empresas inativas a um preço super reduzido. Só R$ 49,90 mês!</p>
+
           <p class="xs-center"><a href="https://app.pjpark.com.br" class="btn btn-lg mt-5 btn-primary">Quero ser cliente</a></p>
         </div>
       </div>
     </div>
   </section>
-  
-  <div class="row" data-aos="zoom-in">
-    <div class="col-md-12 my-5 text-center">
-      * A mensalidade de R$ 39,90 é oferecida no plano anual. <a href="/planos">Conheça todos os nossos planos</a>.
-    </div>
-  </div>
 
 {{- end }}
