--- a/layouts/page/baixa-de-empresa.html
+++ b/layouts/page/baixa-de-empresa.html
@@ -27,7 +27,7 @@
       </div>
     </div>
   </section>
-  
+
   <section class="two" data-aos="zoom-in">
     <a name="sobre"></a>
     <div>
@@ -40,9 +40,9 @@
       <div class="row">
         <div class="col-sm-12 offset-md-1 col-md-7">
           <p class="fs-4 xs-center">A PJ Park é uma startup construída com amor em Maringá ❤️</p>
-          
-          <p class="fs-4 xs-center">Oferecemos serviços online de regularização e manutenção de empresas inativas a um preço super reduzido. Só R$ 39,90 mês*!</p>
-          
+
+          <p class="fs-4 xs-center">Oferecemos serviços online de regularização e manutenção de empresas inativas a um preço super reduzido. Só R$ 49,90 mês!</p>
+
           <p class="xs-center"><a href="https://app.pjpark.com.br" class="btn btn-lg mt-5 btn-primary">Quero ser cliente</a></p>
         </div>
 
@@ -52,11 +52,4 @@
       </div>
     </div>
   </section>
-  
-  <div class="row" data-aos="zoom-in">
-    <div class="col-md-12 my-5 text-center">
-      * A mensalidade de R$ 39,90 é oferecida no plano anual. <a href="/planos">Conheça todos os nossos planos</a>.
-    </div>
-  </div>
-
 {{- end }}
